backend/pytest_output.log
============================= test session starts ==============================
platform linux -- Python 3.12.3, pytest-9.0.3, pluggy-1.6.0 -- /opt/venv/bin/python
cachedir: .pytest_cache
django: version: 6.0.4, settings: config.settings.development (from ini)
PySide6 6.9.2 -- Qt runtime 6.9.2 -- Qt compiled 6.9.2
hypothesis profile 'default'
rootdir: /home/project/wellfond-bms/backend
configfile: pytest.ini
plugins: asyncio-1.3.0, django-4.12.0, respx-0.22.0, qt-4.5.0, Faker-40.5.1, mock-3.12.0, langsmith-0.5.1, logfire-4.16.0, anyio-4.13.0, cov-7.1.0, xdist-3.8.0, hypothesis-6.151.11
asyncio: mode=Mode.STRICT, debug=False, asyncio_default_fixture_loop_scope=None, asyncio_default_test_loop_scope=function
collecting ... collected 0 items / 1 error

==================================== ERRORS ====================================
_____________ ERROR collecting apps/customers/tests/test_blast.py ______________
/opt/venv/lib/python3.12/site-packages/_pytest/python.py:507: in importtestmodule
    mod = import_path(
/opt/venv/lib/python3.12/site-packages/_pytest/pathlib.py:587: in import_path
    importlib.import_module(module_name)
/usr/lib/python3.12/importlib/__init__.py:90: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
/opt/venv/lib/python3.12/site-packages/_pytest/assertion/rewrite.py:197: in exec_module
    exec(co, module.__dict__)
apps/customers/tests/test_blast.py:17: in <module>
    from apps.customers.services.blast import BlastService, BlastProgressTracker, CommunicationRouter
apps/customers/services/__init__.py:7: in <module>
    from .blast import BlastService, BlastProgressTracker
E     File "/home/project/wellfond-bms/backend/apps/customers/services/blast.py", line 382
E       return log
E       ^^^^^^^^^^
E   SyntaxError: 'return' outside function
=============================== warnings summary ===============================
../../../../opt/venv/lib/python3.12/site-packages/pythonjsonlogger/jsonlogger.py:11
  /opt/venv/lib/python3.12/site-packages/pythonjsonlogger/jsonlogger.py:11: DeprecationWarning: pythonjsonlogger.jsonlogger has been moved to pythonjsonlogger.json
    warnings.warn(

-- Docs: https://docs.pytest.org/en/stable/how-to/capture-warnings.html
=========================== short test summary info ============================
ERROR apps/customers/tests/test_blast.py
!!!!!!!!!!!!!!!!!!!! Interrupted: 1 error during collection !!!!!!!!!!!!!!!!!!!!
========================= 1 warning, 1 error in 0.54s ==========================
